--- a/urls.cfg
+++ b/urls.cfg
@@ -1,5 +1,22 @@
-google=https://google.com
-hn=https://news.ycombinator.com
-reddit=https://reddit.com
-statsig=https://www.statsig.com
-worldclock=http://worldclockapi.com/api/json/utc/now
+Freeflix=https://freeflix.eu.org
+FFCloud=https:://cloud.freeflix.eu.org
+FFSutitle=https:://subtitles.freeflix.eu.org
+Portfolio=https://isuru.eu.org
+Blog=https://blog.isuru.eu.org
+Drive=https://drive.isuru.eu.org
+Pong Game=https://pong.isuru.eu.org
+Pacman Game=https://pacman.isuru.eu.org
+Snake Game=https://snake.isuru.eu.org
+Speedtest=https://speedtest.isuru.eu.org
+Texteditor=https://texteditor.isuru.eu.org
+Typingtest=https://typingtest.isuru.eu.org
+Weather=https://weather.isuru.eu.org
+V2ray=https://v2ray.isuru.eu.org
+Textpad=https://textpad.isuru.eu.org
+Textbook=https://textbook.isuru.eu.org
+Ghost CMS=https://ghost.isuru.eu.org
+Filehost=https://filehost.isuru.eu.org
+Caseconverter=https://caseconverter.isuru.eu.org
+Chatgpt=https://chatgpt.isuru.eu.org
+coinflip=https://coinflip.isuru.eu.org
+Custom scrollbar maker=https://custom-scrollbar-maker.isuru.eu.org
