--- a/urls.cfg
+++ b/urls.cfg
@@ -1,5 +1,5 @@
-Freeflix=https://freeflix.eu.org
-FFCloud=https:://cloud.freeflix.eu.org
+F R E E F L I X=https://freeflix.eu.org
+F R E E F L I X Cloud=https:://cloud.freeflix.eu.org
 FFSutitle=https:://subtitles.freeflix.eu.org
 Portfolio=https://isuru.eu.org
 Blog=https://blog.isuru.eu.org
@@ -20,3 +20,4 @@ Caseconverter=https://caseconverter.isuru.eu.org
 Chatgpt=https://chatgpt.isuru.eu.org
 coinflip=https://coinflip.isuru.eu.org
 Custom scrollbar maker=https://custom-scrollbar-maker.isuru.eu.org
+Netspeed=https://netspeed.isuru.eu.org
